vpc_peering.yml
AWSTemplateFormatVersion: 2010-09-09
Description: VPC template for VPC Peering

Parameters:
  KeyName:
    Type: 'AWS::EC2::KeyPair::KeyName'
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
  AmiId:
    Description: AMI Id
    Type: String
    Default: ami-0a1c2ec61571737db
  ClientIP:
    Description: Client IP Address
    Type: String
    Default: 0.0.0.0/0

Resources:
  VPC1:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.100.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: handson-vpc-peering1

  VPC2:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.200.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: handson-vpc-peering2

  VPC3:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.50.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: handson-vpc-peering3

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.100.0.0/24
      VpcId: !Ref VPC1
      AvailabilityZone: !Select [ 0, !GetAZs ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: handson-vpc-peering1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.200.0.0/24
      VpcId: !Ref VPC2
      AvailabilityZone: !Select [ 1, !GetAZs ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: handson-vpc-peering2

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.50.0.0/24
      VpcId: !Ref VPC3
      AvailabilityZone: !Select [ 1, !GetAZs ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: handson-vpc-peering3

  VPC1IGW:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags:
        - Key: Name
          Value: handson-vpc-peering1

  VPC2IGW:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags:
        - Key: Name
          Value: handson-vpc-peering2

  VPC3IGW:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags:
        - Key: Name
          Value: handson-vpc-peering3

  VPC1IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref VPC1IGW
      VpcId: !Ref VPC1

  VPC2IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref VPC2IGW
      VpcId: !Ref VPC2

  VPC3IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref VPC3IGW
      VpcId: !Ref VPC3

  PublicRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: handson-vpc-peering1

  PublicRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC2
      Tags:
        - Key: Name
          Value: handson-vpc-peering2

  PublicRouteTable3:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC3
      Tags:
        - Key: Name
          Value: handson-vpc-peering3

  PublicRoute1:
    Type: AWS::EC2::Route
    DependsOn: VPC1IGW
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPC1IGW

  PublicRoute2:
    Type: AWS::EC2::Route
    DependsOn: VPC2IGW
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPC2IGW

  PublicRoute3:
    Type: AWS::EC2::Route
    DependsOn: VPC3IGW
    Properties:
      RouteTableId: !Ref PublicRouteTable3
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPC3IGW

  VPCPeeringRoute1to2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      DestinationCidrBlock: 10.200.0.0/24
      VpcPeeringConnectionId: !Ref VPCPeering1

  VPCPeeringRoute1to3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      DestinationCidrBlock: 10.50.0.0/24
      VpcPeeringConnectionId: !Ref VPCPeering1

  VPCPeeringRoute2to1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      DestinationCidrBlock: 10.100.0.0/24
      VpcPeeringConnectionId: !Ref VPCPeering1

  VPCPeeringRoute2to3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      DestinationCidrBlock: 10.50.0.0/24
      VpcPeeringConnectionId: !Ref VPCPeering2

  VPCPeeringRoute3to1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable3
      DestinationCidrBlock: 10.100.0.0/24
      VpcPeeringConnectionId: !Ref VPCPeering2

  VPCPeeringRoute3to2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable3
      DestinationCidrBlock: 10.200.0.0/24
      VpcPeeringConnectionId: !Ref VPCPeering2

  PublicSubnet1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable1

  PublicSubnet2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable2

  PublicSubnet3Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet3
      RouteTableId: !Ref PublicRouteTable3

  VPCPeering1:
    Type: 'AWS::EC2::VPCPeeringConnection'
    Properties:
      VpcId: !Ref VPC1
      PeerVpcId: !Ref VPC2

  VPCPeering2:
    Type: 'AWS::EC2::VPCPeeringConnection'
    Properties:
      VpcId: !Ref VPC2
      PeerVpcId: !Ref VPC3

  EC2A:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AmiId
      InstanceType: t3.micro
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup1
      KeyName: !Ref KeyName
      SubnetId : !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: handson-vpc-peering1

  EC2B:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AmiId
      InstanceType: t3.micro
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup2
      KeyName: !Ref KeyName
      SubnetId : !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: handson-vpc-peering2

  EC2C:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AmiId
      InstanceType: t3.micro
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup3
      KeyName: !Ref KeyName
      SubnetId : !Ref PublicSubnet3
      Tags:
        - Key: Name
          Value: handson-vpc-peering3

  InstanceSecurityGroup1:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for VPC1
      SecurityGroupIngress:
        -
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref ClientIP
        -
          IpProtocol: -1
          CidrIp: 10.200.0.0/16
        -
          IpProtocol: -1
          CidrIp: 10.50.0.0/16
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: handson-vpc-peering1

  InstanceSecurityGroup2:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for VPC2
      SecurityGroupIngress:
        -
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref ClientIP
        -
          IpProtocol: -1
          CidrIp: 10.100.0.0/16
        -
          IpProtocol: -1
          CidrIp: 10.50.0.0/16
      VpcId: !Ref VPC2
      Tags:
        - Key: Name
          Value: handson-vpc-peering2

  InstanceSecurityGroup3:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for VPC3
      SecurityGroupIngress:
        -
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref ClientIP
        -
          IpProtocol: -1
          CidrIp: 10.100.0.0/16
        -
          IpProtocol: -1
          CidrIp: 10.200.0.0/16
      VpcId: !Ref VPC3
      Tags:
        - Key: Name
          Value: handson-vpc-peering3

Outputs:
  VPCID1:
    Description: VPC1 ID
    Value: !Ref VPC1
    Export:
      Name: !Sub ${AWS::StackName}-VPCID1

  VPCID2:
    Description: VPC2 ID
    Value: !Ref VPC2
    Export:
      Name: !Sub ${AWS::StackName}-VPCID2

  VPCID3:
    Description: VPC3 ID
    Value: !Ref VPC3
    Export:
      Name: !Sub ${AWS::StackName}-VPCID3

  PublicSubnet1:
    Description: PublicSubnet1
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnet1

  PublicSubnet2:
    Description: PublicSubnet2
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnet2

  PublicSubnet3:
    Description: PublicSubnet3
    Value: !Ref PublicSubnet3
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnet3

  InstanceSecurityGroup1:
    Description: InstanceSecurityGroup1
    Value: !Ref InstanceSecurityGroup1
    Export:
      Name: !Sub ${AWS::StackName}-InstanceSecurityGroup1

  InstanceSecurityGroup2:
    Description: InstanceSecurityGroup2
    Value: !Ref InstanceSecurityGroup2
    Export:
      Name: !Sub ${AWS::StackName}-InstanceSecurityGroup2
